# schadenfreude

./: Cargo.toml
src/: main.rs
src/core/: case.rs  config.rs  mod.rs  project.rs
src/parsers/: pdf.rs
src/utils/: mod.rs  specimen.rs
