[package]
name = "schadenfreude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
dirs = "5.0.0"
regex = "1.7.3"
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.3"
yara = "0.19.0"
