[package]
name = "schadenfreude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
dirs = "5.0.0"
md-5 = "0.10.5"
regex = "1.7.3"
serde = { version = "1.0.160", features = ["derive"] }
sha1 = "0.10.5"
sha2 = "0.10.6"
sha256 = "1.1.3"
toml = "0.7.3"
yara = "0.19.0"
